testcrate/ui/bad-return-type.stderr
error[E0308]: mismatched types
  --> $DIR/bad-return-type.rs:14:8
   |
14 |     Ok(val)
   |        ^^^
   |        |
   |        expected enum `std::option::Option`, found integral variable
   |        help: try using a variant of the expected type: `Some(val)`
   |
   = note: expected type `std::option::Option<i32>`
              found type `{integer}`

error[E0308]: mismatched types
  --> $DIR/bad-return-type.rs:25:14
   |
25 |     yield Ok(val);
   |              ^^^
   |              |
   |              expected enum `std::option::Option`, found integral variable
   |              help: try using a variant of the expected type: `Some(val)`
   |
   = note: expected type `std::option::Option<i32>`
              found type `{integer}`

error[E0308]: mismatched types
  --> $DIR/bad-return-type.rs:31:19
   |
31 |         return Ok(3);
   |                   ^ expected tuple, found integral variable
   |
   = note: expected type `(i32, i32)`
              found type `{integer}`

error: aborting due to 3 previous errors

